--- a/Enchapes/Enchapes.csproj
+++ b/Enchapes/Enchapes.csproj
@@ -24,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Enchapes_AccesoDatos\Enchapes_AccesoDatos.csproj" />
+    <ProjectReference Include="..\Enchapes_Modelos\Enchapes_Modelos.csproj" />
     <ProjectReference Include="..\Enchapes_Utilidades\Enchapes_Utilidades.csproj" />
   </ItemGroup>
 
