Solucion seguridad apikey

--- a/Enchapes/appsettings.json
+++ b/Enchapes/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "SendGrid": {
-    "SecretKey": "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"
+    "SecretKey": ""
   }
 }
