Cambios con patron de repositorio, administracion de ordenes y detalle orden

--- a/Enchapes/appsettings.json
+++ b/Enchapes/appsettings.json
@@ -1,17 +1,24 @@
 {
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=JULIAN;Database=Enchapes;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=true"
-  },
-
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=Enchapes;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=True;TrustServerCertificate=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "SendGrid": {
+        "SecretKey": ""
     }
-  },
-  "AllowedHosts": "*",
-  "SendGrid": {
-    "SecretKey": ""
-  }
 }
+
+
+
+
+
+
+
+
+
