Implementacion de ventas

--- a/Enchapes/appsettings.json
+++ b/Enchapes/appsettings.json
@@ -1,7 +1,9 @@
 {
+
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Database=Enchapes;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=True;TrustServerCertificate=true"
+        "DefaultConnection": "Server=JULIAN;Database=Enchapes;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=true"
     },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
@@ -11,6 +13,12 @@
     "AllowedHosts": "*",
     "SendGrid": {
         "SecretKey": ""
+    },
+    "BrainTree": {
+        "Environment": "sandbox",
+        "MerchantId": "",
+        "PublicKey": "",
+        "PrivateKey": ""
     }
 }
 
