--- a/Enchapes_Utilidades/Enchapes_Utilidades.csproj
+++ b/Enchapes_Utilidades/Enchapes_Utilidades.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Braintree" Version="5.29.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
