--- a/Enchapes_Utilidades/Enchapes_Utilidades.csproj
+++ b/Enchapes_Utilidades/Enchapes_Utilidades.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Braintree" Version="5.29.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
